[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["folder"] # 确保只有 lablib102 一个包(folder)会被 pip 安装

[project]
name = "lablib102"
version = "0.2.7"
description = "personal library for my lab"
authors = [{ name = "haiteng" }]
dependencies = []
